[package]
name = "handle-key"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
keywords = ["guid", "id", "unique"]
readme = "README.md"
documentation = "https://docs.rs/handle-key/"
repository = "https://github.com/schell/handle-key"
categories = ["caching", "game-development", "graphics"]
description = "Typed and named or unnamed map keys"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
